Fixed issue with odd overlapping margins.

--- a/app/assets/stylesheets/base/_global_design.css.scss
+++ b/app/assets/stylesheets/base/_global_design.css.scss
@@ -42,7 +42,7 @@ a {
 
 #content {
   @extend .container;
-  max-width: 1440px;
+
   padding: 0px;
 }
 
